2007-08-13  Donald E. Curtis <dcurtis3@sourceforge.net>

	* libavogadro/src/glwidget.cpp: Refactored clearSelection to clearSelected
	in order to preserve some clarity.  Needs another refactor at sometime to
	clearSelectedPrimitives I think.

2007-08-10  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/tools/navigatotool.cpp: Added visual representation
	of atom centred translation. Needs extra features adding to the
	painter and porting, as does the previous visual feedback.

2007-08-08  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/tools/navigatotool.*: Add visual representation of
	atom centred molecule rotation. Benoit and I worked on this feature in 
	the Versailles gardens in France, all credit to Benoit for figuring
	out the maths and OpenGL. Open up modifiers to all - we always
	planned to add this for all architectures. Alt seems to be taken in
	KDE for Window movement though - possibly need an alternate.

	* libavogadro/src/povpainter.*: Added multiCylinder support thanks to
	help from Benoit with the maths. Also tweaked the default material
	parameters in order to improve the look of default renders. Still need
	to improve the translation from OpenGL to POV-Ray coords.

2007-08-06  Donald E. Curtis <dcurtis3@sourceforge.net>

	* libavogadro/src/glwidget.cpp: GLWidget is not initialized until it is
	actually called to render.  This hopefully fixes a race condition that
	existed somewhere with makeCurrent().  Not sure why this was happening but
	I believe it had something to do with the fact that we were calling
	->run() within the constructor and we don't know what magic TT is doing
	behind the scenes.

	* libavogadro/src/primitiveitemmodel.h,
	libavogadro/src/primitiveitemmodel.cpp: there was an issue with the engine
	views when deleting certain atoms which has been fixed.  Basically the
	model needs to notify the view that it's just taking from the end of the
	list but has reordered the contents (just the way we happen to change