@@ -1,3 +1,6 @@
+2007-08-10  Marcus D. Hanwell <marcus@cryos.org>
+	* libavogadro/src/tools/clickmeasuretool.cpp: Added units to the output.
+
 2007-08-13  Donald E. Curtis <dcurtis3@sourceforge.net>
 
 	* libavogadro/src/glwidget.cpp: Refactored clearSelection to clearSelected
